--- a/styles.css
+++ b/styles.css
@@ -118,8 +118,8 @@ header h1 {  /*existe*/
 }
 
 .video {
-    width: 560;
-    height:315;
+    width: 560px;
+    height: 315px;
 }
 
 #img2 {
@@ -424,8 +424,8 @@ footer ul li a { /* (5) */
     }
 
     .video {
-        width: 560;
-        height:315;
+        width: 560px;
+        height: 315px;
     }
     
     #img2 {
