--- a/styles.css
+++ b/styles.css
@@ -424,8 +424,8 @@ footer ul li a { /* (5) */
     }
 
     .video {
-        width: 560px;
-        height: 315px;
+        width: 100%;
+        height: auto;
     }
     
     #img2 {
