--- a/styles.css
+++ b/styles.css
@@ -425,7 +425,7 @@ footer ul li a { /* (5) */
 
     .video {
         width: 100%;
-        height: auto;
+        height: 240px
     }
     
     #img2 {
@@ -439,8 +439,8 @@ footer ul li a { /* (5) */
     .img2 {
         display:block; /* Garante que as imagens se comportem como blocos, ocupando toda a linha */
         margin:0 auto;
-        width: 500px;
-        height: 500px;
+        width: 100%;
+        height: 350px;
     
       }
     
