--- a/styles.css
+++ b/styles.css
@@ -312,10 +312,7 @@ footer ul li a { /* (5) */
     }
     
     body {
-        margin-top: 1px;
-        margin-bottom: 1px;
-        margin-inline: 1px;
-        background: #ffffff;
+        background: #542362;
         font-family: Arial, Sans-serif;
     }
     
@@ -333,7 +330,7 @@ footer ul li a { /* (5) */
         background: #542362;
         color: #ffffffd8;
         padding-top: 10px;
-        padding-bottom: 20px;
+        padding-bottom: 8px;
         font-family: 'Roboto', 'Poppins', sans-serif;
         font-weight: 1000;
         font-size: 25px;
@@ -349,16 +346,17 @@ footer ul li a { /* (5) */
         margin: -0 auto;
         background: #ffffff;
         padding: 46px;
-        width:313px;
-        height: 313px;
+        width: 310px;
+        height: 310px;
         border-radius: 500px;
     }
     
     .img{ /*existe*/
-        margin-left: -80px;
+        margin-left: -105px;
         margin-top: -60px;
-        width: 400px; 
+        width: 478px; 
         height: 350px;
+        padding-bottom: 20px;
     }
     
     .caracteristicas { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
@@ -372,7 +370,7 @@ footer ul li a { /* (5) */
         color: #ffffffd8;
         text-align: center;
         line-height: 3;
-        font-size: 30px;
+        font-size: 20px;
     }
     
     .caracteristicas h4 {
