--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,7 @@ footer ul li a { /* (5) */
     }
     
     body {
-        background: #542362;
+        background: #ffffff;
         font-family: Arial, Sans-serif;
     }
     
@@ -352,9 +352,9 @@ footer ul li a { /* (5) */
     }
     
     .img{ /*existe*/
-        margin-left: -105px;
+        margin-left: -100px;
         margin-top: -60px;
-        width: 478px; 
+        width: 450px; 
         height: 350px;
         padding-bottom: 20px;
     }
