--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,7 @@
 }
 
 body {
-    margin-top: 1px;
-    margin-bottom: 1px;
-    margin-inline: 1px;
+    margin: 0px;
     background: #ffffff;
     font-family: Arial, Sans-serif;
 }
