--- a/styles.css
+++ b/styles.css
@@ -448,7 +448,7 @@ footer ul li a { /* (5) */
     }
     
     .head-3 { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
-        width:300px;
+        width:100%;
         margin: 0 auto;
         font-size: 16px;
         font-family: 'Roboto', 'Poppins', sans-serif;
