--- a/styles.css
+++ b/styles.css
@@ -448,12 +448,12 @@ footer ul li a { /* (5) */
     }
     
     .head-3 { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
-        width:100%;
+        width:90%;
         margin: 0 auto;
         font-size: 16px;
         font-family: 'Roboto', 'Poppins', sans-serif;
-        font-weight: 500;
         text-align: justify;
+        line-height: 1.5;
     }
     
     .best-seller {
