--- a/styles.css
+++ b/styles.css
@@ -343,10 +343,11 @@ footer ul li a { /* (5) */
     
     .home{ /*existe*/
         margin: 0 auto;
+        margin-bottom: 20px;
         background: #ffffff;
         padding: 46px;
-        width: 270px;
-        height: 270px;
+        width: 250px;
+        height: 250px;
         border-radius: 500px;
     }
     
@@ -429,7 +430,7 @@ footer ul li a { /* (5) */
         display: inline-block;
         text-align: center;
         margin-bottom: 50px;
-        border: 5px solid #ddd;
+        border: 1px solid #ddd;
         border-radius: 5px;
     }
     
