--- a/styles.css
+++ b/styles.css
@@ -337,26 +337,26 @@ footer ul li a { /* (5) */
     }
     
     #home { /*existe*/
-        
+        padding-top:10px;
         background: linear-gradient(to bottom, #542362,  #9b3c82,#9b3c82,#542362de,#542362,#542362,#542362);
     }
     
     .home{ /*existe*/
         margin: 0 auto;
-        margin-bottom: 20px;
+        padding-top: 30px;
+        margin-bottom: 30px;
         background: #ffffff;
-        padding: 46px;
         width: 250px;
         height: 250px;
         border-radius: 500px;
     }
     
     .img{ /*existe*/
-        margin-left: -90px;
+        margin-left: -100px;
         margin-top: -60px;
         width: 390px; 
         height: 330px;
-        padding-bottom: 30px;
+        padding-bottom: 10px;
     }
     
     .caracteristicas { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
@@ -389,8 +389,8 @@ footer ul li a { /* (5) */
     }
     
     .btn { /*existe*/
-        margin-top: 30px;
-        margin-bottom: 40px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         display: inline-block;
         background-color: #48b02c;
         color: #ffffff;
@@ -429,7 +429,7 @@ footer ul li a { /* (5) */
     #img2 {
         display: inline-block;
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 10px;
         border: 1px solid #ddd;
         border-radius: 5px;
     }
