--- a/styles.css
+++ b/styles.css
@@ -346,8 +346,8 @@ footer ul li a { /* (5) */
         padding-top: 30px;
         margin-bottom: 30px;
         background: #ffffff;
-        width: 250px;
-        height: 250px;
+        width: 260px;
+        height: 260px;
         border-radius: 500px;
     }
     
@@ -381,16 +381,17 @@ footer ul li a { /* (5) */
         width: 100%;
         margin: 0 auto;
         padding-left: 40px;
+        padding-right: 40px;
         line-height: 2;
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 450;
         font-family: 'Roboto', 'Poppins', sans-serif;
         text-align: justify;
     }
     
     .btn { /*existe*/
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         display: inline-block;
         background-color: #48b02c;
         color: #ffffff;
@@ -429,8 +430,8 @@ footer ul li a { /* (5) */
     #img2 {
         display: inline-block;
         text-align: center;
-        margin-bottom: 10px;
-        border: 1px solid #ddd;
+        margin-bottom: 15px;
+        border: 0.5px solid #ddd;
         border-radius: 5px;
     }
     
@@ -438,7 +439,7 @@ footer ul li a { /* (5) */
         display:block; /* Garante que as imagens se comportem como blocos, ocupando toda a linha */
         margin:0 auto;
         width: 100%;
-        height: 350px;
+        height: 320px;
     
       }
     
