--- a/styles.css
+++ b/styles.css
@@ -431,16 +431,15 @@ footer ul li a { /* (5) */
         display: inline-block;
         text-align: center;
         margin-bottom: 15px;
-        border: 0.5px solid #ddd;
+        border: 1px solid #ddd;
         border-radius: 5px;
     }
     
     .img2 {
         display:block; /* Garante que as imagens se comportem como blocos, ocupando toda a linha */
         margin:0 auto;
-        width: 100%;
+        width: 320px;
         height: 320px;
-    
       }
     
     .head-2 { /*existe*/
