--- a/styles.css
+++ b/styles.css
@@ -380,8 +380,8 @@ footer ul li a { /* (5) */
     .descricao { /*existe*/
         width: 100%;
         margin: 0 auto;
-        padding-left: 40px;
-        padding-right: 40px;
+        padding-left: 10px;
+        padding-right: 10px;
         line-height: 2;
         font-size: 14px;
         font-weight: 450;
@@ -423,8 +423,8 @@ footer ul li a { /* (5) */
     }
 
     .video {
-        width: 100%;
-        height: 240px
+        width: 320px;
+        height: 200px
     }
     
     #img2 {
@@ -443,17 +443,19 @@ footer ul li a { /* (5) */
       }
     
     .head-2 { /*existe*/
+        padding-inline: 50px;
         font-size: 20px;
         font-family: 'Roboto', 'Poppins', sans-serif;
         font-weight: 1000;
     }
     
     .head-3 { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
+        padding-inline: 30px;
         width:90%;
         margin: 0 auto;
         font-size: 16px;
         font-family: 'Roboto', 'Poppins', sans-serif;
-        text-align: justify;
+        text-align: center;
         line-height: 1.5;
     }
     
