--- a/styles.css
+++ b/styles.css
@@ -443,20 +443,22 @@ footer ul li a { /* (5) */
       }
     
     .head-2 { /*existe*/
-        padding-inline: 50px;
+        padding-left: 5px;
         font-size: 20px;
         font-family: 'Roboto', 'Poppins', sans-serif;
         font-weight: 1000;
     }
     
     .head-3 { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
-        padding-inline: 30px;
-        width:90%;
+        padding-top: 10px;
+        padding-inline: 10px;
+        width:100%;
         margin: 0 auto;
         font-size: 16px;
         font-family: 'Roboto', 'Poppins', sans-serif;
-        text-align: center;
+        text-align: justify;
         line-height: 1.5;
+        font-weight: 0;
     }
     
     .best-seller {
