--- a/styles.css
+++ b/styles.css
@@ -466,6 +466,7 @@ footer ul li a { /* (5) */
         color:#ffffff;
         padding-top: 35px;
         padding-bottom: 35px;
+        padding-left: 30px;
         display: flex;
         justify-content: center;
         
