--- a/styles.css
+++ b/styles.css
@@ -518,12 +518,14 @@ footer ul li a { /* (5) */
     
     
     #garantia { /*existe*/
-        width: 80%; 
+        background-color: #000000;
+        width: 100%; 
         max-width: 1200px;
         margin: 0 auto;
-        padding-top: 0px;
-        padding-bottom: 50px;
-        color: rgba(0, 0, 0, 0.788);
+        padding-top: 20px;
+        padding-inline: 50px;
+        padding-bottom: 20px;
+        color: white;
         text-align: center;
     }
     
@@ -533,14 +535,16 @@ footer ul li a { /* (5) */
     }
     
     #garantia h2 { /*existe*/
+        color: white;
         margin-bottom: 20px;
         padding-bottom: 10px;
         border-bottom: 1px solid #ddd;
     }
     
     #garantia p { /*existe*/
+        padding-left: 20px;
         margin-bottom: 10px;
-        color: rgba(0, 0, 0, 0.788);
+        color: white;
         line-height: 2.5;
         letter-spacing: 0.5px;
         font-size: 15px;
