--- a/styles.css
+++ b/styles.css
@@ -518,14 +518,14 @@ footer ul li a { /* (5) */
     
     
     #garantia { /*existe*/
-        background-color: #000000;
+        background-color: #ffffff;
         width: 100%; 
         max-width: 1200px;
         margin: 0 auto;
         padding-top: 20px;
         padding-inline: 40px;
         padding-bottom: 20px;
-        color: white;
+        color: rgba(0, 0, 0, 0.788);
         text-align: center;
         margin-bottom: 30px;
     }
@@ -536,15 +536,15 @@ footer ul li a { /* (5) */
     }
     
     #garantia h2 { /*existe*/
-        color: white;
+        color: rgba(0, 0, 0, 0.788);
         margin-bottom: 20px;
         padding-bottom: 10px;
-        border-bottom: 0px solid #ddd;
+        border-bottom: 1px solid #ddd;
     }
     
     #garantia p { /*existe*/
         margin-bottom: 10px;
-        color: white;
+        color: rgb(0, 0, 0);
         line-height: 2.5;
         letter-spacing: 0.5px;
         font-size: 16px;
