--- a/styles.css
+++ b/styles.css
@@ -527,7 +527,7 @@ footer ul li a { /* (5) */
         padding-bottom: 20px;
         color: rgba(0, 0, 0, 0.788);
         text-align: center;
-        margin-bottom: 30px;
+        margin-bottom: 40px;
     }
     
     #garantia img {
@@ -597,7 +597,7 @@ footer ul li a { /* (5) */
     
     
     footer { 
-        background-color: #000000;
+        background-color: #cccccc;
         color: #fff;
         text-align: center;
         padding: 20px;
