--- a/styles.css
+++ b/styles.css
@@ -598,7 +598,7 @@ footer ul li a { /* (5) */
     
     footer { 
         background-color: #cccccc;
-        color: #fff;
+        color: #969696;
         text-align: center;
         padding: 20px;
         font-size: 12px;
