--- a/styles.css
+++ b/styles.css
@@ -124,7 +124,7 @@ header h1 {  /*existe*/
     display: inline-block;
     text-align: center;
     margin-bottom: 50px;
-    border: 5px solid #ddd;
+    border: 5px solid #ffffff;
     border-radius: 5px;
 }
 
@@ -431,7 +431,7 @@ footer ul li a { /* (5) */
         display: inline-block;
         text-align: center;
         margin-bottom: 15px;
-        border: 1px solid #ddd;
+        border: 5px solid #ddd;
         border-radius: 5px;
     }
     
