--- a/styles.css
+++ b/styles.css
@@ -361,7 +361,7 @@ footer ul li a { /* (5) */
     
     .caracteristicas { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
         color: #fff;
-        padding-inline: 0px;
+        padding-inline: 20px;
         text-align: center;
     }
     
@@ -378,9 +378,10 @@ footer ul li a { /* (5) */
     }
     
     .descricao { /*existe*/
+        width: 100%;
         margin: 0 auto;
-        padding-left: 0px;
-        padding-right: 0px;
+        padding-left: 10px;
+        padding-right: 10px;
         line-height: 2;
         font-size: 14px;
         font-weight: 450;
@@ -442,10 +443,10 @@ footer ul li a { /* (5) */
       }
     
     .head-2 { /*existe*/
+        padding-left: 5px;
         font-size: 20px;
         font-family: 'Roboto', 'Poppins', sans-serif;
         font-weight: 1000;
-        
     }
     
     .head-3 { /*atençaooooooooooooooooooooooooooooooooooooooooooooooooo*/
