--- a/styles.css
+++ b/styles.css
@@ -380,13 +380,13 @@ footer ul li a { /* (5) */
     .descricao { /*existe*/
         width: 100%;
         margin: 0 auto;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0px;
+        padding-right: 0px;
         line-height: 2;
         font-size: 14px;
         font-weight: 450;
         font-family: 'Roboto', 'Poppins', sans-serif;
-        text-align: justify;
+        text-align: left;
     }
     
     .btn { /*existe*/
