--- a/styles.css
+++ b/styles.css
@@ -597,8 +597,8 @@ footer ul li a { /* (5) */
     
     
     footer { 
-        background-color: #cccccc;
-        color: #777777;
+        background-color: #000000;
+        color: #ffffff;
         text-align: center;
         padding: 15px;
         font-size: 12px;
