--- a/styles.css
+++ b/styles.css
@@ -519,8 +519,8 @@ footer ul li a { /* (5) */
     
     #garantia { /*existe*/
         background-color: #ffffff;
-        width: 100%; 
-        max-width: 1200px;
+        min-width: 320px; 
+        max-width: 800px;
         margin: 0 auto;
         padding-top: 20px;
         padding-inline: 40px;
@@ -543,7 +543,8 @@ footer ul li a { /* (5) */
     }
     
     #garantia p { /*existe*/
-        margin-bottom: 10px;
+        padding: 0px;
+        
         color: rgb(0, 0, 0);
         line-height: 2.5;
         letter-spacing: 0.5px;
