--- a/styles.css
+++ b/styles.css
@@ -542,6 +542,74 @@ footer ul li a { /* (5) */
         display: none;
     }
 
+    .produto {
+        background-color: #fff;
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        display: flex;
+        flex-direction: row;
+        max-width: 700px;
+        margin: 20px;
+        margin-left: 400px;
+        margin-top: 80px;
+      }
+    
+      .produto-img {
+        width: 450px;
+        height: 350px;
+        object-fit: cover;
+      }
+    
+      .descricao-pro {
+        padding: 20px;
+        flex: 1;
+      }
+    
+      .nome-produto {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+    
+      .descricao-produto {
+        font-size: 1rem;
+        color: #555;
+        margin-bottom: 15px;
+      }
+    
+      .precos {
+        margin-bottom: 20px;
+      }
+    
+      .preco-antigo {
+        text-decoration: line-through;
+        color: #888;
+        font-size: 1.2rem;
+        margin-right: 10px;
+      }
+    
+      .preco-atual {
+        font-size: 1.5rem;
+        color: #e74c3c;
+        font-weight: bold;
+      }
+    
+      .comprar-btn {
+        background-color: #e74c3c;
+        color: white;
+        padding: 10px 20px;
+        font-size: 1rem;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+      }
+    
+      .comprar-btn:hover {
+        background-color: #c0392b;
+      }
+
     .best-seller {
         background-color: black;
         color:#ffffff;
