--- a/styles.css
+++ b/styles.css
@@ -573,8 +573,8 @@ footer ul li a { /* (5) */
   }
 
   .preco-atual {
-    font-size: 1.5rem;
-    color: #e74c3c;
+    font-size: 2rem;
+    color:#48b02c;
     font-weight: bold;
   }
 
