--- a/styles.css
+++ b/styles.css
@@ -584,6 +584,10 @@ footer ul li a { /* (5) */
     border-color: #48b02c;
   }
 
+.produto .btn {
+    margin-left: 70px;
+}
+
     .best-seller {
         background-color: black;
         color:#ffffff;
