--- a/styles.css
+++ b/styles.css
@@ -168,9 +168,9 @@ header h1 {  /*existe*/
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: row;
-    max-width: 700px;
+    max-width: 750px;
     margin: 20px;
-    margin-left: 400px;
+    margin-left: 380px;
     margin-top: 80px;
   }
 
@@ -203,8 +203,9 @@ header h1 {  /*existe*/
 
   .preco-antigo {
     text-decoration: line-through;
-    color: #888;
-    font-size: 1.2rem;
+    color: red;
+    font-weight: bold;
+    font-size: 2.5rem;
     margin-right: 10px;
   }
 
@@ -226,6 +227,7 @@ header h1 {  /*existe*/
 /*-----------------------------------DEPOIMENTOS--------------------------------------*/
 
 #section-depoimentos {
+    margin-inline: 40px;
     text-align: center;
     margin-bottom: 60px;
     margin-top: 20px;
