--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ header h1 {  /*existe*/
     flex-direction: row;
     max-width: 750px;
     margin: 20px;
-    margin-left: 380px;
+    margin-left: 30%;
     margin-top: 80px;
   }
 
