--- a/styles.css
+++ b/styles.css
@@ -169,10 +169,9 @@ header h1 {  /*existe*/
     display: flex;
     flex-direction: row;
     max-width: 750px;
-    margin: 20px;
-    margin-left: 30%;
-    margin-top: 80px;
-  }
+    margin: 80px auto 20px; /* Altera para auto nas laterais */
+}
+
 
   .produto-img {
     width: 450px;
@@ -228,8 +227,7 @@ header h1 {  /*existe*/
 
 #section-depoimentos {
     text-align: center;
-    margin-bottom: 60px;
-    margin-top: 20px;
+    margin: 20px auto 60px; /* Centraliza horizontalmente e mantém as margens superior e inferior */
 }
 
 #section-depoimentos h2 { 
